--- a/project-information/project-information.json
+++ b/project-information/project-information.json
@@ -1,6 +1,12 @@
 {
     "project_name": "[project_name]",
     "project description": "[project_description]",
+    "project_video_url": "[project_video_url]",
+    "techlabs_url": "https://techlabs.org/",
+    "techlabs_location": "[Berlin]",
+    "techlabs_semester": "[WiSe2021]",
+    "project_status": "[searching for funding]",
+    "project_skills": ["Notion", "Fondora", "Postman"],
     "project_members_contacts": [
         {
             "name": "Nickname1",
