--- a/project-information.json
+++ b/project-information.json
@@ -1,7 +1,9 @@
 {
     "project_name": "[project_name]",
-    "project description": "[project_description]",
+    "project_name_full": "[project_name_full]",
+    "project_description": "[project_description]",
     "project_video_url": "[project_video_url]",
+    "project_prototype_url": "[project_protype_url]",
     "techlabs_url": "https://techlabs.org/",
     "techlabs_location": "[Berlin]",
     "techlabs_semester": "[WiSe2021]",
@@ -15,7 +17,7 @@
             "github_name": "GithubName1",
             "github_url": "https://api.github.com/users/TechLabs-Berlin/",
             "linkedin_url": "https://linkedin",
-            "email_adress": "Nickname1@provider.com"
+            "email_adress": "Nickname1@provider.com",
             "display": true
         },
         {"name": "[Nickname]",
@@ -24,7 +26,7 @@
             "github_name": "[GithubName]",
             "github_url": "[github_url]",
             "linkedin_url": "[linkedin_url]",
-            "email_adress": "[email_adress]"
+            "email_adress": "[email_adress]",
             "display": true
         }
         ]
