changed project-skills to project-tools

--- a/project-information/project-information.json
+++ b/project-information/project-information.json
@@ -8,7 +8,7 @@
     "techlabs_location": "[Berlin]",
     "techlabs_semester": "[WiSe2021]",
     "project_status": "[searching for funding]",
-    "project_skills": ["Notion", "Fondora", "Postman"],
+    "project_tools": ["Notion", "Fondora", "Postman"],
     "project_members_contacts": [
         {
             "name": "Nickname1",
