--- a/project-information.json
+++ b/project-information.json
@@ -1,6 +1,6 @@
 {
-    "project_name": "[project_name]",
-    "project_name_full": "[project_name_full]",
+    "project_name": "test-repository-1",
+    "project_name_full": "Test Repository 1",
     "project_description": "[project_description]",
     "project_video_url": "[project_video_url]",
     "project_prototype_url": "[project_protype_url]",
