edited project info

--- a/project-information.json
+++ b/project-information.json
@@ -1,32 +1,34 @@
 {
     "name": "test-repository-1",
     "nameFull": "Test Repository 1",
-    "videoUrl": "[project_video_url]",
-    "prototypeUrl": "[project_protype_url]",
+    "videoUrl": ""https://drive.google.com/file/d/1Jikn3mHcnxS0cV4Y4igj1vTX7eAdBh7m/view",
+    "prototypeUrl": "https://www.figma.com/proto/uBhYU7XNDItIfeX0W22MH9/WhatStreetArt---Everything?page-id=0%3A1&node-id=133%3A8608&viewport=-1034%2C780%2C0.5655179023742676&scaling=scale-down",
     "techlabsUrl": "https://techlabs.org/",
-    "location": "[Berlin]",
-    "semester": "[WiSe2021]",
-    "status": "[searching for funding]",
-    "tools": ["Notion", "Fondora", "Postman"],
+    "location": "Berlin",
+    "semester": "WiSe2021",
+    "status": "Looking for collaborators",
+    "tools": ["Notion", "Fondora", "Postman", "Figma", "Miro"],
     "membersContacts": [
         {
-            "name": "Nickname1",
-            "nameFull": "FirstName1, SecondName1",
-            "track": "UK",
-            "githubName": "GithubName1",
-            "githubUrl": "https://api.github.com/users/TechLabs-Berlin/",
-            "linkedinUrl": "https://linkedin",
-            "emailAdress": "Nickname1@provider.com",
+            "name": "David",
+            "nameFull": "David, Dillmann",
+            "track": "UX",
+            "githubName": "dlmndvd",
+            "githubUrl": "https://github.com/dlmdvd",
+            "linkedinUrl": "https://linkedin.com",
+            "emailAdress": "david.dillmann@web.de",
+            "personalPage": "daviddillmann.de",
             "display": true
         },
         {
-            "name": "[Nickname]",
-            "nameFull": "[FirstName], [SecondName]",
-            "track": "[track]",
-            "githubName": "[GithubName]",
-            "githubUrl": "[github_url]",
-            "linkedinUrl": "[linkedin_url]",
-            "emailAdress": "[email_adress]",
+            "name": "Javad",
+            "nameFull": "Javad, Raisi",
+            "track": "WD",
+            "githubName": "jiveeee",
+            "githubUrl": "https://github.com/jiveeee",
+            "linkedinUrl": "https://linkedin.com",
+            "emailAdress": null,
+            "personalPage": null,
             "display": true
         }
         ]
