--- a/project-information.json
+++ b/project-information.json
@@ -1,7 +1,7 @@
 {
     "name": "test-repository-1",
     "nameFull": "Test Repository 1",
-    "videoUrl": ""https://drive.google.com/file/d/1Jikn3mHcnxS0cV4Y4igj1vTX7eAdBh7m/view",
+    "videoUrl": "https://drive.google.com/file/d/1Jikn3mHcnxS0cV4Y4igj1vTX7eAdBh7m/view",
     "prototypeUrl": "https://www.figma.com/proto/uBhYU7XNDItIfeX0W22MH9/WhatStreetArt---Everything?page-id=0%3A1&node-id=133%3A8608&viewport=-1034%2C780%2C0.5655179023742676&scaling=scale-down",
     "techlabsUrl": "https://techlabs.org/",
     "location": "Berlin",
